Solved navbar and particles position which was covered by particles

--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -5,6 +5,8 @@
   align-items: center;
   justify-content: center;
   font-size: 1.2rem;
+  z-index: 100;
+  position: relative;
   &__container {
     display: flex;
     align-items: center;
